feat: add parallel config

--- a/demo/package.json
+++ b/demo/package.json
@@ -80,6 +80,7 @@
   ],
   "config": {
     "accesslog": true,
+    "parallel": ["es", "js"],
     "port": 3000,
     "entry": {
       "@ant-design-vue/demo-tools": [
